--- a/Django/Django_Image_Gallary/templates/first_app/index.html
+++ b/Django/Django_Image_Gallary/templates/first_app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <form method="post">
+      <form id="imgFrom" method="post">
         {% csrf_token %}
         <label for="txt">Text:</label>
         <br>
@@ -19,13 +19,11 @@
         <br>
         <textarea name="description" rows="8" cols="80"></textarea>
         <br>
-        <br>
         <label for="img1">Image1</label>
         <br>
-        <input type="file" name="img1" accept="image/*" />
+        <input id="img1" type="file" name="img1" accept="image/*" />
         <br>
-        <br>
-        <button type="button" onclick="myFunction()" name="button">Plus</button>
+        <button id="plus" type="button" onclick="myFunction()" name="button">Plus</button>
         <br>
         <br>
         <input type="submit" name="submit" value="Submit">
@@ -35,36 +33,23 @@
     <script>
 
       function myFunction() {
-        var i = document.createElement("input");
-        i.type = "file";
-        i.name = "user_name";
-        i.id = "user_name1";
-        i.accept = "image/*";
+        var input = document.createElement("input");
+        input.type = "file";
+        input.name = "user_name";
+        input.id = "user_name1";
+        input.accept = "image/*";
 
-        var form = document.getElementsByTagName("form")[0];
-        var submit = document.getElementsByTagName("button")[0];
-        form.insertBefore (i,submit);
+        var form = document.getElementById("imgFrom");
+        var plusBTN = document.getElementById("plus");
+        form.insertBefore (input,plusBTN);
 
-        var l = document.createElement('lable');
-        l.innerHTML = "Image2";
+        var label = document.createElement('p');
+        label.innerHTML = "Image2";
+        form.insertBefore(label,input);
 
-        form.insertBefore(l,i);
+        var br = document.createElement('br');
+        form.insertBefore(br,plusBTN);
 
-        var b = document.createElement('br');
-        form.insertBefore(b,l);
-
-        form.insertBefore(b,i);
-        form.insertBefore(b,submit);
-        form.insertBefore(b,submit);
-
-        // var newlabel = document.createElement("Label");
-        // newlabel.setAttribute("for",i);
-        // newlabel.innerHTML = "Image2";
-        // i.appendChild(newlabel);
-
-        // var form = document.getElementsByTagName('form')[0].appendChild(i);
-        //
-        // document.getElementsByTagName('body')[0].appendChild(form);
       }
     </script>
 
