--- a/Django/Django_Image_Gallary/templates/first_app/index.html
+++ b/Django/Django_Image_Gallary/templates/first_app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <form id="imgFrom" method="post">
+      <form id="imgFrom" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <label for="txt">Text:</label>
         <br>
